# maya-tools-lxm

./: .gitignore  LICENSE.md  README.md  pyproject.toml
snippets/: maya_select_similar.py
src/MPyAbcExport/PyAbcExport/core/: settings.py
src/cmds_interface_demo/: README.md  maya.cmds_interface_demo.pizza_creator.py
src/cmds_interface_demo/path_input/: path_input.py
src/cmds_interface_demo/pizza_creator/: pizza_creator.py
src/launchers/: README.md  launcher.Maya-2023.env-aibf.sh  launcher.Maya-2023.env-default.bat  launcher.Maya-2023.env-default.sh
src/launchers/env-aibf/: pluginPrefs.mel  userPrefs.py
src/launchers/env-default/: pluginPrefs.mel  userPrefs.py
src/launchers/startup/: userSetup.py
src/mash2pointcloud/: LICENSE.md  README.md  m2p.py  package.json
src/mash2pointcloud/mash2pointcloud/: __init__.py  appinfo.json  config_m2p.py  constants_m2p.py  exceptions_m2p.py  launcher_m2p.py
src/mash2pointcloud/mash2pointcloud/core/: alembicExporter.py
src/polyTransferUVs/: poly_transfer_uvs.py
src/referenceExporter/: README.md  referenceBakedExport.py
src/refrepath/: README.md  refrepath.py  refrepath_batch.py
src/refrepath/refrepath/: __init__.py  batch.py  c.py  cli.py  core.py  gui.py  maya_utils.py  utils.py
src/resetWindowPosition/: README.md  reset_window_position.py
src/securityVirusCleaner/: README.md  virus_cleaner.py
src/selectSimilarPolyCount/: select_similar_poly_count.py
src/shapeNameConform/: shape_name_conform.py
src/snippets/: maya_rename_shape.py  maya_transfer_uvs.py
(+2 files in other folders)
